docs/sf-export/sfdx-raw/objects/Callout_Data__c/Callout_Data__c.object-meta.xml
<CustomObject>
    <description>This object stores the basic information regarding the callout.</description>
    <label>Callout Data</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Callout Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>