docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/DateEnd__c.field-meta.xml
<CustomField>
    <fullName>DateEnd__c</fullName>
    <description>To capture the end date time from the get callout</description>
    <label>DateEnd</label>
    <type>DateTime</type>
</CustomField>