docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/DateStart__c.field-meta.xml
<CustomField>
    <fullName>DateStart__c</fullName>
    <description>To capture the start date time from the get callout</description>
    <label>DateStart</label>
    <type>DateTime</type>
</CustomField>