docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture the boolean value whether the callout is success or not</description>
    <label>IsSuccess</label>
    <type>Checkbox</type>
</CustomField>