docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>To store the callout success/error message if any</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>