docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>To store the callout method name</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>