docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/Records_Count__c.field-meta.xml
<CustomField>
    <fullName>Records_Count__c</fullName>
    <description>To store the number of records retrieved from the callout</description>
    <label>Records Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>