docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To capture the HTTP response status</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>