docs/sf-export/sfdx-raw/objects/Callout_Data__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>To store the HTTP response status code</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>