docs/sf-export/sfdx-raw/objects/Callout_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>IsSuccess__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Message__c</columns>
    <columns>Records_Count__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>